--- a/templates/anime_downloader_anilife_request.html
+++ b/templates/anime_downloader_anilife_request.html
@@ -222,6 +222,7 @@
 
     $(document).ready(function () {
         $("#loader").css("display", 'none')
+        console.log({{ arg['code'] }})
         // console.log('wr_id::', params.wr_id)
 
 
