--- a/templates/anime_downloader_ohli24_list.html
+++ b/templates/anime_downloader_ohli24_list.html
@@ -8,7 +8,7 @@
         <span class="col-md-4">
           <select id="order" name="order" class="form-control form-control-sm">
             <option value="desc">최근순</option>
-            <option value="asc">오래된순</option>
+            <option value="asc">오래된 순</option>
           </select>
           <select id="option" name="option" class="form-control form-control-sm">
             <option value="all">전체</option>
@@ -34,18 +34,23 @@
   <div id='page2'></div>
 </div>
 
+{#    <script src="{{ url_for('.static', filename='js/sjva_global1.js') }}"></script>#}
+{#    <script src="{{ url_for('.static', filename='js/sjva_ui14.js') }}"></script>#}
 <script type="text/javascript">
 var package_name = "{{arg['package_name']}}";
 var sub = "{{arg['sub']}}";
 var current_data = null;
 
 $(document).ready(function(){
-  global_sub_request_search('1');
+  {#global_sub_request_search('1');#}
+    console.log('ready')
+    globalRequestSearch2('1');
 });
 
 $("#search").click(function(e) {
   e.preventDefault();
-  global_sub_request_search('1');
+  {#global_sub_request_search('1');#}
+    globalRequestSearch2('1');
 });
 
 $("body").on('click', '#page', function(e){
