--- a/templates/anime_downloader_ohli24_search.html
+++ b/templates/anime_downloader_ohli24_search.html
@@ -752,10 +752,19 @@
             }
 
             #yommi_wrapper {
-                max-width: 80%;
+
+                max-width: 100%;
                 margin: 0 auto;
             }
+
+            .container {
+                max-width: 85%!important;
+            }
+            #screen_movie_list {
+               max-width: 100%!important;
+            }
         }
+
 
         .card {
             margin-bottom: 0.75rem;
