--- a/templates/anime_downloader_anilife_category.html
+++ b/templates/anime_downloader_anilife_category.html
@@ -179,7 +179,7 @@
             // {#tmp += '<button id="code_button" data-code="' + data.episode[i].code + '" type="button" class="btn btn-primary code-button bootstrap-tooltip" data-toggle="button" data-tooltip="true" aria-pressed="true" autocomplete="off" data-placement="top">' +#}
             //  {#    '<span data-tooltip-text="'+data.episode[i].title+'">' + data.episode[i].code + '</span></button></div>';#}
             tmp += '<h5 class="card-title">' + data.anime_list[i].title + '</h5>';
-            tmp += '<p class="card-text">' + data.anime_list[i].code + '</p>';
+            // tmp += '<p class="card-text">' + data.anime_list[i].code + '</p>';
             tmp += '<a href="./request?code=' + data.anime_list[i].code + '" class="btn btn-primary cut-text">' + data.anime_list[i].title + '</a>';
             tmp += '</div>';
             tmp += '</div>';
