--- a/templates/anime_downloader_linkkf_request.html
+++ b/templates/anime_downloader_linkkf_request.html
@@ -24,8 +24,8 @@
     <div>
         <form id="program_list">
             {{ macros.setting_input_text_and_buttons('code', '작품 Code',
-        [['analysis_btn', '분석'], ['go_ohli24_btn', 'Go OHLI24']], desc='예)
-        "https://ohli24.net/c/녹을 먹는 비스코" 이나 "녹을 먹는 비스코"') }}
+            [['analysis_btn', '분석'], ['go_linkkf_btn', 'Go 링크 애니']], desc='예)
+            "https://linkkf.app/코드" 나 "코드"') }}
         </form>
         <form id="program_auto_form">
             <div id="episode_list"></div>
