--- a/templates/anime_downloader_linkkf_search.html
+++ b/templates/anime_downloader_linkkf_search.html
@@ -907,6 +907,14 @@
             width: 100%;
         }
 
+        .badge-on-image {
+            position: absolute;
+            top: 2px;
+            /*bottom: 2px; !* position where you want it *!*/
+            right: 2px;
+            padding: 5px 12px;
+        }
+
         #screen_movie_list {
             margin-top: 10px;
         }
